--- a/.github/workflows/interaction-store.yml
+++ b/.github/workflows/interaction-store.yml
@@ -1,19 +1,19 @@
-name: Horizon CI
+name: Interaction Store CI
 
 on:
   pull_request:
     branches: [main, develop]
-    paths: ['horizon/**']
+    paths: ['interaction-store/**']
   push:
     branches: [main, develop]
-    paths: ['horizon/**']
+    paths: ['interaction-store/**']
 
 jobs:
-  build-horizon:
+  build-interaction-store:
     runs-on: ubuntu-latest
     defaults:
       run:
-        working-directory: ./horizon
+        working-directory: ./interaction-store
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -30,9 +30,9 @@ jobs:
           path: |
             ~/.cache/go-build
             ~/go/pkg/mod
-          key: ${{ runner.os }}-go-horizon-${{ hashFiles('horizon/go.sum') }}
+          key: ${{ runner.os }}-go-is-${{ hashFiles('interaction-store/go.sum') }}
           restore-keys: |
-            ${{ runner.os }}-go-horizon-
+            ${{ runner.os }}-go-is-
 
       - name: Download dependencies
         run: go mod download
@@ -40,8 +40,11 @@ jobs:
       - name: Run tests
         run: go test -v ./...
 
-      - name: Build application
-        run: go build -v ./...
+      - name: Build server
+        run: go build -v ./cmd/server
+
+      - name: Build consumer
+        run: go build -v ./cmd/consumer
 
       - name: Run go vet
         run: go vet ./...
@@ -50,4 +53,4 @@ jobs:
         run: go install honnef.co/go/tools/cmd/staticcheck@latest
 
       - name: Run staticcheck
-        run: staticcheck ./... 
+        run: staticcheck ./...
