--- a/.github/workflows/trufflebox-ui.yml
+++ b/.github/workflows/trufflebox-ui.yml
@@ -2,10 +2,10 @@ name: Trufflebox UI CI
 
 on:
   pull_request:
-    branches: [master, develop]
+    branches: [main, develop]
     paths: ['trufflebox-ui/**']
   push:
-    branches: [master, develop]
+    branches: [main, develop]
     paths: ['trufflebox-ui/**']
 
 jobs:
