--- a/py-sdk/inference_logging_client/pyproject.toml
+++ b/py-sdk/inference_logging_client/pyproject.toml
@@ -10,7 +10,7 @@ readme = "readme.md"
 requires-python = ">=3.8"
 license = {text = "MIT"}
 authors = [
-    {name = "Your Name", email = "your.email@example.com"},
+    {name = "Dhruv Gupta", email = "dhruv.gupta@meesho.com"},
 ]
 keywords = ["mplog", "decoder", "inference", "logging", "proto", "arrow", "parquet"]
 classifiers = [
