Code Refractoring for Embedding Store Automation (#130)

--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -345,6 +345,7 @@ services:
       - MYSQL_SLAVE_PASSWORD=root
       - MYSQL_SLAVE_HOST=mysql
       - MYSQL_SLAVE_PORT=3306
+      - MYSQL_SLAVE_PORT=3306
       - MYSQL_SLAVE_USERNAME=root
       - MYSQL_ACTIVE_CONFIG_IDS=2
       - ETCD_WATCHER_ENABLED=true
