--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -26,7 +26,7 @@
             "mode": "debug",
             "program": "${workspaceFolder}/flashring/cmd/flashringtest",
             "env": {
-                "PLAN": "readthrough-batched"
+                "PLAN": "readthrough"
             }
         }
 
