--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -61,6 +61,22 @@ services:
       interval: 30s
       timeout: 10s
       retries: 5
+
+  qdrant:
+    image: qdrant/qdrant:v1.16.0
+    container_name: qdrant
+    ports:
+      - "6333:6333"
+      - "6334:6334"
+    volumes:
+      - qdrant-data:/qdrant/storage
+    networks:
+      - onfs-network
+    healthcheck:
+      test: ["CMD-SHELL", "curl -f http://localhost:6333/healthz || exit 1"]
+      interval: 30s
+      timeout: 10s
+      retries: 5
    
   kafka:
     image: apache/kafka:latest
@@ -110,10 +126,17 @@ services:
       echo 'Waiting for Kafka to be ready...'
       sleep 10
       
-      # Create the topic
+      # Create ONFS topic
       /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic online-feature-store.feature_ingestion --partitions 1 --replication-factor 1
       
-      echo 'Topic created successfully!'
+      # Create Skye topics
+      /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic skye.model-state --partitions 1 --replication-factor 1
+      /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic skye.embedding --partitions 1 --replication-factor 1
+      /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic skye.embedding-sequence --partitions 1 --replication-factor 1
+      /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic skye.realtime --partitions 1 --replication-factor 1
+      /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic skye.realtime-delta --partitions 1 --replication-factor 1
+      
+      echo 'Topics created successfully!'
       "
     restart: "no"
 
@@ -125,8 +148,7 @@ services:
       - ETCD_LISTEN_CLIENT_URLS=http://0.0.0.0:2379
       - ETCD_ADVERTISE_CLIENT_URLS=http://0.0.0.0:2379
     ports:
-      - "2379:2379"
-      - "2380:2380"
+      - "2378:2379"
     networks:
       - onfs-network
     healthcheck:
@@ -538,16 +560,39 @@ services:
     ports:
       - "8092:8092"
     environment:
-      - CONFIG_LOCATION=/config
-      - ENVIRONMENT=staging
-      - DEPLOYABLE_NAME=skye-admin
-    volumes:
-      - ./skye-config:/config:ro
+      # Application
+      - APP_NAME=skye-admin
+      - APP_ENV=local
+      - APP_LOG_LEVEL=INFO
+      - APP_METRIC_SAMPLING_RATE=100
+      - PORT=8092
+      # Etcd
+      - ETCD_SERVER=etcd:2379
+      - ETCD_WATCHER_ENABLED=true
+      # Model state Kafka producer (ID=1)
+      - MODEL_STATE_PRODUCER=1
+      - KAFKA_PRODUCER_1_TOPICS=skye.model-state
+      - KAFKA_PRODUCER_1_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_PRODUCER_1_CLIENT_ID=skye-admin-producer
+      # Model state Kafka consumer (ID=1)
+      - MODEL_STATE_CONSUMER=1
+      - KAFKA_1_TOPICS=skye.model-state
+      - KAFKA_1_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_1_BASIC_AUTH_CREDENTIAL_SOURCE=NONE
+      - KAFKA_1_GROUP_ID=skye-admin-model-state
+      - KAFKA_1_AUTO_OFFSET_RESET=earliest
+      - KAFKA_1_AUTO_COMMIT_INTERVAL_MS=5000
+      - KAFKA_1_ENABLE_AUTO_COMMIT=false
+      - KAFKA_1_LISTENER_CONCURRENCY=1
+      - KAFKA_1_CLIENT_ID=skye-admin-consumer
+      - KAFKA_1_BATCH_SIZE=10
+      - KAFKA_1_POLL_TIMEOUT=1000
     networks:
       - onfs-network
     depends_on:
       - etcd
       - kafka
+      - qdrant
     restart: unless-stopped
 
   skye-admin-healthcheck:
@@ -572,16 +617,83 @@ services:
     ports:
       - "8093:8093"
     environment:
-      - CONFIG_LOCATION=/config
-      - ENVIRONMENT=staging
-      - DEPLOYABLE_NAME=skye-consumers
-    volumes:
-      - ./skye-config:/config:ro
+      # Application
+      - APP_NAME=skye-consumers
+      - APP_ENV=local
+      - APP_LOG_LEVEL=INFO
+      - APP_METRIC_SAMPLING_RATE=100
+      - PORT=8093
+      # Etcd
+      - ETCD_SERVER=etcd:2379
+      - ETCD_WATCHER_ENABLED=true
+      # Embedding consumer (ID=2)
+      - EMBEDDING_CONSUMER_KAFKA_IDS=2
+      - KAFKA_2_TOPICS=skye.embedding
+      - KAFKA_2_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_2_BASIC_AUTH_CREDENTIAL_SOURCE=NONE
+      - KAFKA_2_GROUP_ID=skye-embedding-consumer
+      - KAFKA_2_AUTO_OFFSET_RESET=earliest
+      - KAFKA_2_AUTO_COMMIT_INTERVAL_MS=5000
+      - KAFKA_2_ENABLE_AUTO_COMMIT=false
+      - KAFKA_2_LISTENER_CONCURRENCY=1
+      - KAFKA_2_CLIENT_ID=skye-embedding-consumer
+      - KAFKA_2_BATCH_SIZE=10
+      - KAFKA_2_POLL_TIMEOUT=1000
+      # Embedding sequence consumer (ID=3)
+      - EMBEDDING_CONSUMER_SEQUENCE_KAFKA_IDS=3
+      - KAFKA_3_TOPICS=skye.embedding-sequence
+      - KAFKA_3_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_3_BASIC_AUTH_CREDENTIAL_SOURCE=NONE
+      - KAFKA_3_GROUP_ID=skye-embedding-seq-consumer
+      - KAFKA_3_AUTO_OFFSET_RESET=earliest
+      - KAFKA_3_AUTO_COMMIT_INTERVAL_MS=5000
+      - KAFKA_3_ENABLE_AUTO_COMMIT=false
+      - KAFKA_3_LISTENER_CONCURRENCY=1
+      - KAFKA_3_CLIENT_ID=skye-embedding-seq-consumer
+      - KAFKA_3_BATCH_SIZE=10
+      - KAFKA_3_POLL_TIMEOUT=1000
+      # Realtime consumer (ID=4)
+      - REALTIME_CONSUMER_KAFKA_IDS=4
+      - KAFKA_4_TOPICS=skye.realtime
+      - KAFKA_4_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_4_BASIC_AUTH_CREDENTIAL_SOURCE=NONE
+      - KAFKA_4_GROUP_ID=skye-realtime-consumer
+      - KAFKA_4_AUTO_OFFSET_RESET=earliest
+      - KAFKA_4_AUTO_COMMIT_INTERVAL_MS=5000
+      - KAFKA_4_ENABLE_AUTO_COMMIT=false
+      - KAFKA_4_LISTENER_CONCURRENCY=1
+      - KAFKA_4_CLIENT_ID=skye-realtime-consumer
+      - KAFKA_4_BATCH_SIZE=10
+      - KAFKA_4_POLL_TIMEOUT=1000
+      # Realtime producer (ID=5)
+      - REALTIME_PRODUCER_KAFKA_ID=5
+      - KAFKA_PRODUCER_5_TOPICS=skye.realtime
+      - KAFKA_PRODUCER_5_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_PRODUCER_5_CLIENT_ID=skye-realtime-producer
+      # Realtime delta producer (ID=6)
+      - REALTIME_DELTA_PRODUCER_KAFKA_ID=6
+      - KAFKA_PRODUCER_6_TOPICS=skye.realtime-delta
+      - KAFKA_PRODUCER_6_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_PRODUCER_6_CLIENT_ID=skye-realtime-delta-producer
+      # Realtime delta consumer (ID=7)
+      - REALTIME_DELTA_CONSUMER_KAFKA_ID=7
+      - KAFKA_7_TOPICS=skye.realtime-delta
+      - KAFKA_7_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_7_BASIC_AUTH_CREDENTIAL_SOURCE=NONE
+      - KAFKA_7_GROUP_ID=skye-realtime-delta-consumer
+      - KAFKA_7_AUTO_OFFSET_RESET=earliest
+      - KAFKA_7_AUTO_COMMIT_INTERVAL_MS=5000
+      - KAFKA_7_ENABLE_AUTO_COMMIT=false
+      - KAFKA_7_LISTENER_CONCURRENCY=1
+      - KAFKA_7_CLIENT_ID=skye-realtime-delta-consumer
+      - KAFKA_7_BATCH_SIZE=10
+      - KAFKA_7_POLL_TIMEOUT=1000
     networks:
       - onfs-network
     depends_on:
       - etcd
       - kafka
+      - qdrant
     restart: unless-stopped
 
   skye-consumers-healthcheck:
@@ -606,16 +718,31 @@ services:
     ports:
       - "8094:8094"
     environment:
-      - CONFIG_LOCATION=/config
-      - ENVIRONMENT=staging
-      - DEPLOYABLE_NAME=skye-serving
+      # Application
+      - APP_NAME=skye-serving
+      - APP_ENV=local
+      - APP_LOG_LEVEL=INFO
       - APP_PORT=8094
-    volumes:
-      - ./skye-config:/config:ro
+      - APP_METRIC_SAMPLING_RATE=100
+      # In-memory cache (10 MB)
+      - IN_MEMORY_CACHE_SIZE_IN_BYTES=10485760
+      # Etcd
+      - ETCD_SERVER=etcd:2379
+      - ETCD_WATCHER_ENABLED=true
+      # Redis
+      - REDIS_ADDR=redis:6379
+      - REDIS_DB=0
+      # Profiling (disabled for quick-start)
+      - PROFILING_ENABLED=false
+      # Storage (no external ScyllaDB in quick-start)
+      - STORAGE_AGGREGATOR_DB_COUNT=0
+      - STORAGE_EMBEDDING_STORE_COUNT=0
     networks:
       - onfs-network
     depends_on:
       - etcd
+      - redis
+      - qdrant
     restart: unless-stopped
 
   skye-serving-healthcheck:
@@ -734,6 +861,8 @@ volumes:
   scylla-data:
     driver: local
   mysql-data:
+    driver: local
+  qdrant-data:
     driver: local
 
 networks:
