--- a/skye/cmd/serving/Dockerfile
+++ b/skye/cmd/serving/Dockerfile
@@ -3,9 +3,12 @@ FROM golang:1.24-bullseye AS builder
 
 ARG TARGETOS
 ARG TARGETARCH
-ENV CGO_ENABLED=0 \
+ENV CGO_ENABLED=1 \
     GOOS=${TARGETOS} \
     GOARCH=${TARGETARCH}
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    librdkafka-dev gcc g++ && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /app
 
@@ -15,12 +18,13 @@ RUN go mod download
 COPY . .
 RUN go build -o skye-serving ./cmd/serving
 
-# Runtime
-FROM gcr.io/distroless/static:nonroot
+# Runtime — needs libc for CGO/librdkafka
+FROM gcr.io/distroless/base:nonroot
 
 WORKDIR /
 
 COPY --from=builder /app/skye-serving .
+COPY --from=builder /usr/lib/*-linux-gnu/librdkafka* /usr/lib/
 
 EXPOSE 9090
 
