Add AUTH_TOKENS environment variable to Docker Compose and rename Qdrant collection
- Introduced AUTH_TOKENS variable in the Docker Compose configuration for improved authentication management.
- Renamed the Qdrant collection to follow a new naming convention for better clarity and consistency.

--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -737,6 +737,7 @@ services:
       # Storage (no external ScyllaDB in quick-start)
       - STORAGE_AGGREGATOR_DB_COUNT=0
       - STORAGE_EMBEDDING_STORE_COUNT=0
+      - AUTH_TOKENS=test
     networks:
       - onfs-network
     depends_on:
