Inferflow generic APIs along with logging support (#302)
* added model proxy logging changes

* refactor

* added generic api changes

* added local run changes

* pushed

* refactor

* added slate wise response

* refactor infer apis response

* logging support

* remove unused models

* add readme

* release prep

* refactor kafka topic

* refactor

* fix

* pkg renaming (#304)

* Updated the docker version for inferflow

* fixes for staticcheck

---------

Co-authored-by: Tushar Rohilla <tushar.rohilla@meesho.com>
Co-authored-by: ansh-meesho <ansh.agrawal@meesho.com>

--- a/quick-start/docker-compose.yml
+++ b/quick-start/docker-compose.yml
@@ -136,6 +136,7 @@ services:
       
       # Create ONFS topic
       /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic online-feature-store.feature_ingestion --partitions 1 --replication-factor 1
+      /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic inferflow_inference_logs --partitions 1 --replication-factor 1
       
       # Create Skye topics
       /opt/kafka/bin/kafka-topics.sh --bootstrap-server broker:29092 --create --if-not-exists --topic skye.model-state --partitions 1 --replication-factor 1
@@ -584,6 +585,8 @@ services:
       - EXTERNAL_SERVICE_PREDATOR_CALLER_TOKEN=inferflow
       - EXTERNAL_SERVICE_PREDATOR_DEADLINE=200
       - METRIC_SAMPLING_RATE=1
+      - KAFKA_BOOTSTRAP_SERVERS=broker:29092
+      - KAFKA_LOGGING_TOPIC=inferflow_inference_logs
     networks:
       onfs-network:
         ipv4_address: 172.18.0.18
