--- a/docs-src/blog/authors.yml
+++ b/docs-src/blog/authors.yml
@@ -5,22 +5,22 @@ adarsha:
   image_url: https://github.com/a0d00kc.png
 aditya:
   name: Aditya Kumar
-  title: SDE-III @ Meesho
+  title: Lead Software Engineer  @ Meesho
   url: https://github.com/Adit2607
   image_url: https://github.com/Adit2607.png
 jigar:
   name: Jigar Dave
-  title: SDE-IV @ Meesho
+  title: Lead Software Engineer @ Meesho
   url: https://github.com/jigarpatel26
   image_url: https://github.com/jigarpatel26.png
 jaya:
   name: Jaya Kumar
-  title: MLE-III @ Meesho
+  title: Lead ML Engineer @ Meesho
   url: https://github.com/jayakommuru
   image_url: https://github.com/jayakommuru.png
 bhawani:
   name: Bhawani Singh
-  title: SDE-IV @ Meesho
+  title: Architect @ Meesho
   url: https://github.com/singh-bhawani
   image_url: https://github.com/singh-bhawani.png
 mohit:
