--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -20,7 +20,6 @@ jobs:
       online-feature-store-changed: ${{ steps.changes.outputs.online-feature-store }}
       go-sdk-changed: ${{ steps.changes.outputs.go-sdk }}
       py-sdk-changed: ${{ steps.changes.outputs.py-sdk }}
-      helix-client-changed: ${{ steps.changes.outputs.helix-client }}
       inferflow-changed: ${{ steps.changes.outputs.inferflow }}
       skye-changed: ${{ steps.changes.outputs.skye }}
       multiple-components: ${{ steps.check-multiple.outputs.multiple }}
@@ -48,8 +47,6 @@ jobs:
               - 'go-sdk/**'
             py-sdk:
               - 'py-sdk/**'
-            helix-client:
-              - 'helix-client/**'
             inferflow:
               - 'inferflow/**'
             skye:
@@ -77,9 +74,6 @@ jobs:
           if [ "${{ steps.changes.outputs.py-sdk }}" == "true" ]; then
             changed_count=$((changed_count + 1))
           fi
-          if [ "${{ steps.changes.outputs.helix-client }}" == "true" ]; then
-            changed_count=$((changed_count + 1))
-          fi
           if [ "${{ steps.changes.outputs.inferflow }}" == "true" ]; then
             changed_count=$((changed_count + 1))
           fi
@@ -96,7 +90,7 @@ jobs:
       - name: Check if any component changed
         id: check-any
         run: |
-          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.numerix }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.helix-client }}" == "true" ] || [ "${{ steps.changes.outputs.inferflow }}" == "true" ] || [ "${{ steps.changes.outputs.skye }}" == "true" ]; then
+          if [ "${{ steps.changes.outputs.horizon }}" == "true" ] || [ "${{ steps.changes.outputs.trufflebox-ui }}" == "true" ] || [ "${{ steps.changes.outputs.numerix }}" == "true" ] || [ "${{ steps.changes.outputs.online-feature-store }}" == "true" ] || [ "${{ steps.changes.outputs.go-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.py-sdk }}" == "true" ] || [ "${{ steps.changes.outputs.inferflow }}" == "true" ] || [ "${{ steps.changes.outputs.skye }}" == "true" ]; then
             echo "any=true" >> $GITHUB_OUTPUT
           else
             echo "any=false" >> $GITHUB_OUTPUT
@@ -116,7 +110,6 @@ jobs:
           echo "- Online Feature Store CI: ${{ needs.detect-changes.outputs.online-feature-store-changed }}"
           echo "- Go SDK CI: ${{ needs.detect-changes.outputs.go-sdk-changed }}"
           echo "- Python SDK CI: ${{ needs.detect-changes.outputs.py-sdk-changed }}"
-          echo "- Helix Client CI: ${{ needs.detect-changes.outputs.helix-client-changed }}"
           echo "- Inferflow CI: ${{ needs.detect-changes.outputs.inferflow-changed }}"
           echo "- Skye CI: ${{ needs.detect-changes.outputs.skye-changed }}"
           echo "This workflow will proceed with integration tests..."
@@ -137,7 +130,6 @@ jobs:
           echo "Testing Numerix matrix operations integration..."
           echo "Testing Go SDK compatibility with backend services..."
           echo "Testing Python SDK compatibility with backend services..."
-          echo "Testing Helix Client compatibility with backend services..."
           echo "Testing Inferflow compatibility with backend services..."
           # Add actual integration test commands here
 
@@ -218,6 +210,5 @@ jobs:
           echo "- Online Feature Store: ${{ needs.detect-changes.outputs.online-feature-store-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Go SDK: ${{ needs.detect-changes.outputs.go-sdk-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Python SDK: ${{ needs.detect-changes.outputs.py-sdk-changed }}" >> $GITHUB_STEP_SUMMARY
-          echo "- Helix Client: ${{ needs.detect-changes.outputs.helix-client-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Inferflow: ${{ needs.detect-changes.outputs.inferflow-changed }}" >> $GITHUB_STEP_SUMMARY
           echo "- Skye: ${{ needs.detect-changes.outputs.skye-changed }}" >> $GITHUB_STEP_SUMMARY 
