--- a/docs-src/package.json
+++ b/docs-src/package.json
@@ -24,7 +24,8 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "3.8.1",
-    "@docusaurus/types": "3.8.1"
+    "@docusaurus/types": "3.8.1",
+    "yarn": "1.22.22"
   },
   "browserslist": {
     "production": [
