--- a/flashringc/CMakeLists.txt
+++ b/flashringc/CMakeLists.txt
@@ -84,6 +84,9 @@ target_link_libraries(test_cache PRIVATE flashring)
 add_executable(bench_cache tests/bench_cache.cpp)
 target_link_libraries(bench_cache PRIVATE flashring)
 
+add_executable(bench_heavy tests/bench_heavy.cpp)
+target_link_libraries(bench_heavy PRIVATE flashring)
+
 # --- Legacy tests (kept for reference, may need updating) ---
 add_executable(ring_test tests/ring_test.cpp)
 target_link_libraries(ring_test PRIVATE flashring)
